# easy_crypto_exchange

./: .env  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
app/: __init__.py  conftest.py  main.py
app/core/: api_templates.py  config.py  http_exceptions.py
app/exchange/: api.py  service.py
app/helpers/: coins_validation.py  date_and_time.py  requests_utils.py
app/router/api_v1/: endpoints.py
app/services/: __init__.py
app/services/cache/: cache_service.py
app/services/cache/simple_cache/: simple_cache.py
app/services/crypto_exchange/: coin_gecko.py
app/tests/: test_api.py  test_cache.py  test_exceptions.py  test_utils.py
app/tests/data/: data.json
app/tests/utils/: strings_util.py
